--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="generate" onclick="displayRandomQuote(), displayRandomImage()" >
                 <h1 >AGAIN!</h1>
         </div>
-
+        <div class="space"></div>
         <div class="credits"><h1>@szml:)</h1></div>
 
     </div>
